BB-2040 update client
